--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,10 @@ jobs:
       - name: Install
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          # Install this package in editable mode so tests can import `mercury`
+          python -m pip install -e .
+          # Install test dependencies if present (optional)
+          python -m pip install -r requirements.txt || true
       - name: Validate plugin manifests
         run: |
           python tools/check_manifests.py
