--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,27 +5,41 @@ on: [push, pull_request]
 jobs:
   tests:
     runs-on: ubuntu-latest
+
     steps:
+      # 1. Checkout the repo
       - uses: actions/checkout@v4
+
+      # 2. Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Install
+
+      # 3. Install dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # Install this package in editable mode so tests can import `mercury`
+          # Install your package in editable mode so tests can import `mercury`
           python -m pip install -e .
-          # Install test dependencies if present (optional)
+          # Install test dependencies
           python -m pip install -r requirements.txt || true
+          # Ensure pytest is available
+          python -m pip install pytest
+
+      # 4. Validate plugin manifests
       - name: Validate plugin manifests
         run: |
           python tools/check_manifests.py
+
+      # 5. Run tests
       - name: Run tests
         run: |
           pytest -q
-      - name: Run tests inside Docker sandbox (optional)
+
+      # 6. Optional: Run tests inside Docker sandbox
+      - name: Run tests inside Docker sandbox
         run: |
-          # Build the sandbox image and run tests inside it to get stronger isolation
           docker build -t mercury-sandbox:ci sandbox/
-          docker run --rm -v "${{ github.workspace }}:/app" mercury-sandbox:ci /bin/bash -c "cd /app && python -m pip install pytest && pytest -q"
+          docker run --rm -v "${{ github.workspace }}:/app" mercury-sandbox:ci \
+            /bin/bash -c "cd /app && python -m pip install pytest && pytest -q"
