--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,6 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
   pull_request:
 
 jobs:
@@ -11,36 +9,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the repo
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Set up Python
-      - name: Set up Python 3.10
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      # 3️⃣ Install package and dependencies
-      - name: Install dependencies
+      - name: Install package and dependencies
         run: |
           python -m pip install --upgrade pip
-          # Install your package in editable mode so tests can import `mercury`
           python -m pip install -e .
-          # Install test dependencies if present
           python -m pip install -r requirements.txt || true
 
-      # 4️⃣ Validate plugin manifests
       - name: Validate plugin manifests
-        run: python tools/check_manifests.py
-
-      # 5️⃣ Run tests
-      - name: Run tests
-        run: pytest -q
-
-      # 6️⃣ Optional: Run tests inside Docker sandbox for stronger isolation
-      - name: Run tests in Docker sandbox
-        if: false  # set true if you want to use Docker
         run: |
-          docker build -t mercury-sandbox:ci sandbox/
-          docker run --rm -v "${{ github.workspace }}:/app" mercury-sandbox:ci /bin/bash -c "cd /app && python -m pip install pytest && pytest -q"
+          python tools/check_manifests.py
+
+      - name: Run tests
+        run: |
+          pytest -q
