--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,23 +13,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Show ref (debug)
-        run: |
-          echo "GITHUB_REF=$GITHUB_REF"
+      # Step 2: Show the Git ref for debugging
+      - name: Show ref
+        run: echo "GITHUB_REF=$GITHUB_REF"
 
-      # ✅ Ensure PowerShell exists on Linux
-      - name: Set up PowerShell
-        uses: PowerShell/PowerShell@v1
-
+      # Step 3: Run PowerShell script to build lite ZIP
       - name: Build lite ZIP
-        shell: pwsh
-        run: |
-          ./build-lite-release.ps1
-          Get-ChildItem *.zip
+        run: pwsh -File ./build-lite-release.ps1
 
+      # Step 4: List the generated ZIP for verification
+      - name: List ZIP file
+        run: ls -l mercury-framework-lite-*.zip
+
+      # Step 5: Upload the ZIP to GitHub Releases
       - name: Upload release asset
         uses: softprops/action-gh-release@v2
         with:
